--- a/EMSMainService/Web.config
+++ b/EMSMainService/Web.config
@@ -24,16 +24,14 @@
     <modules>
       <remove name="FormsAuthentication" />
     </modules>
-    
-    <!--<httpProtocol>
+
+    <httpProtocol>
       <customHeaders>
         <add name="Access-Control-Allow-Origin" value="*" />
-        <add name="Access-Control-Allow-Headers" value="*" />
-        <add name="Access-Control-Allow-Methods" value="GET, POST, PUT, DELETE,     OPTIONS" />
-        --><!--<add name="Access-Encoding" value="gzip, deflate, br"/>
-        <add name="Accept-Language" value="*"/>--><!--
+        <add name="Access-Control-Allow-Headers" value="Content-Type" />
+        <add name="Access-Control-Allow-Methods" value="GET, POST, PUT, DELETE, OPTIONS" />
       </customHeaders>
-    </httpProtocol>-->
+    </httpProtocol>
   <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
       <remove name="OPTIONSVerbHandler" />
